capstone-k8s.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: New-cap
  labels:
    app: New-cap
spec:
  selector:
    matchLabels:
      app: New-cap
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  progressDeadlineSeconds: 1200
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: New-cap
    spec:
      terminationGracePeriodSeconds: 60
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - New-cap
              - key: "temporary"
                operator: In
                values:
                - "true"
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: udacity
        image:venuv123/New-cap:1ec1f86
        command: [
          "/bin/bash", 
          "-c", 
          "npm run serve"
          ]
        imagePullPolicy: Always
        resources:
          limits:
            memory: 64Mi
            cpu: 250m
          requests:
            memory: 32Mi
            cpu: 200m
        ports:
        - containerPort: 80
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            scheme: HTTP
            port: 80
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 2
          timeoutSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: New-cap
spec:
  type: LoadBalancer
  selector:
    app: New-cap
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: New-cap
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "ingress-nginx"
    #Limit app to my personal IP
    #nginx.ingress.kubernetes.io/whitelist-source-range: "IP/32"

spec:
  rules:
  - host: bcrypt.amandasouza.net
    http:
      paths:
      - path: /
        backend:
          serviceName: New-cap
          servicePort: 80
